chore: prepare clean DWP development baseline